--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "mongoose": "^6.4.3",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
